Creating new C++ script
new script

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,5 +1,7 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=E260B4705F45B8CF1D90ED8056A14C92
+CompanyName=ChrysesGames
+CopyrightNotice=Copyright Daniel Frank 2019
 
 [StartupActions]
 bAddPacks=True
